--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 <div><span class="block text-slate-400 text-xs">Kurikulum</span><span class="font-medium">Merdeka</span></div>
             </div>
         </div>
+<div class="marquee-wrap">
+  <div id="marquee" class="marquee">
+    ✨ Jangan panik lihat kisi-kisi... paniklah kalau belum belajar. ✨
+  </div>
+</div>
 
         <!-- Toolbar -->
         <div class="flex flex-col md:flex-row justify-between items-center gap-4 mb-6">
@@ -591,5 +596,26 @@
             }
         }
     </script>
+    <script>
+  const quotes = [
+    "✨ Jangan panik lihat kisi-kisi... paniklah kalau belum belajar. ✨",
+    "✨ Belajar itu seperti WiFi, kadang kuat kadang hilang sinyal. ✨",
+    "✨ Jika soal susah, ingatlah… jawabannya tetap harus ditulis. ✨",
+    "✨ Kisi-kisi ini tidak menggigit… tapi ujiannya bisa. ✨",
+    "✨ Ujian itu seperti mantan… makin dihindari makin muncul terus. ✨"
+  ];
+
+  let index = 0;
+  const marquee = document.getElementById("marquee");
+
+  function updateQuote() {
+    marquee.textContent = quotes[index];
+    index = (index + 1) % quotes.length;
+  }
+
+  // ganti quote tiap 5 detik
+  setInterval(updateQuote, 5000);
+</script>
+
 </body>
 </html>
