--- a/index.html
+++ b/index.html
@@ -612,6 +612,40 @@
     marquee.textContent = quotes[index];
     index = (index + 1) % quotes.length;
   }
+        /* ================== MARQUEE CENTER ================== */
+.marquee-wrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;        /* posisi ke tengah */
+  background: #eef6ff;
+  padding: 8px 0;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 10px 0;
+}
+
+.marquee {
+  font-weight: bold;
+  font-size: 16px;
+  white-space: nowrap;
+  display: inline-block;
+  animation: scroll-left 18s linear infinite;
+}
+
+.marquee-wrap:hover .marquee {
+  animation-play-state: paused;
+  cursor: pointer;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(100%);  /* mulai dari kanan */
+  }
+  100% {
+    transform: translateX(-100%); /* keluar di kiri */
+  }
+}
+
 
   // ganti quote tiap 5 detik
   setInterval(updateQuote, 5000);
